sumo/tests/sumo/errors/traffic_lights/initial_ok/options.sumo
--no-step-log --no-duration-log -n net.net.xml

